objects/Opportunity/fields/Most_Recent_Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Next_Step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Most Recent Next Step</label>
    <referenceTo>Next_Step__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>