objects/Opportunity/fields/Next_Step_Last_Update__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_Last_Update__c</fullName>
    <label>Next Step Last Update</label>
    <type>Date</type>
</CustomField>