objects/Opportunity/fields/Next_Steps1__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps1__c</fullName>
    <label>Next Steps</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>