objects/Opportunity/fields/Next_Steps_Age__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps_Age__c</fullName>
    <formula>Today() - (Most_Recent_Next_Step__r.Date__c)</formula>
    <label>Next Steps: Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>