objects/Opportunity/fields/Next_Steps_Updated_By__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps_Updated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next Steps: Updated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>